soothfast-bind/tests/goldens/csharp/acme_core.h

/* Code generated by `cargo soothfast bind gen`. DO NOT EDIT. */

#ifndef ACME_CORE_H
#define ACME_CORE_H

#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>

#ifdef __cplusplus
extern "C" {
#endif

typedef struct acme_core_counter acme_core_counter;

typedef enum acme_core_level {
    ACME_CORE_LEVEL_LOW = 0,
    ACME_CORE_LEVEL_HIGH = 1,
} acme_core_level;

typedef struct acme_core_mode acme_core_mode;

/* An owned `f64` sequence. Release it with acme_core_f64_array_free. */
typedef struct acme_core_f64_array {
    double *data;
    size_t len;
} acme_core_f64_array;

void acme_core_f64_array_free(acme_core_f64_array array);

/* An owned `u8` sequence. Release it with acme_core_u8_array_free. */
typedef struct acme_core_u8_array {
    uint8_t *data;
    size_t len;
} acme_core_u8_array;

void acme_core_u8_array_free(acme_core_u8_array array);

/* Release a string this library returned. */
void acme_core_string_free(char *text);

/* Release a Counter this library returned. */
void acme_core_counter_free(acme_core_counter *handle);
acme_core_counter * acme_core_counter_new(int64_t start);
int64_t acme_core_counter_value(const acme_core_counter *handle);
int64_t acme_core_counter_at(const acme_core_counter *handle, acme_core_level level);
int64_t acme_core_counter_bump(const acme_core_counter *handle, int64_t by, char **error);
int64_t acme_core_counter_bump_all(const acme_core_counter *handle, const int64_t *by, size_t by_len);

/* Release a Mode this library returned. */
void acme_core_mode_free(acme_core_mode *handle);

/* `label` may be NULL. May return NULL. */
char * acme_core_describe(const char *label);
acme_core_u8_array acme_core_digest(const uint8_t *data, size_t data_len);
acme_core_counter * acme_core_find_counter(int64_t start);
char * acme_core_greet(const char *name);
acme_core_f64_array acme_core_normalize(const double *input, size_t input_len, double factor);
acme_core_level acme_core_peak_level(const double *values, size_t values_len);
void acme_core_scale_into(const double *values, size_t values_len, double factor, double *out, size_t out_len);
uint64_t acme_core_stamp(int64_t handle_, double error_, const uint8_t *register_, size_t register_len);

#ifdef __cplusplus
}
#endif

#endif /* ACME_CORE_H */