soothfast-bind/tests/goldens/csharp/Native.cs

// Code generated by `cargo soothfast bind gen`. DO NOT EDIT.

using System;
using System.IO;
using System.Reflection;
using System.Runtime.CompilerServices;
using System.Runtime.InteropServices;

namespace Acme.Core;

internal struct AcmeCoreF64Array
{
    public IntPtr Data;
    public nuint Len;
}

internal struct AcmeCoreU8Array
{
    public IntPtr Data;
    public nuint Len;
}

internal static class Native
{
    private const string LibraryName = "acme_core";

    [ModuleInitializer]
    internal static void Init()
    {
        NativeLibrary.SetDllImportResolver(typeof(Native).Assembly, Resolve);
    }

    private static IntPtr Resolve(string libraryName, Assembly assembly, DllImportSearchPath? searchPath)
    {
        if (libraryName != LibraryName)
        {
            return IntPtr.Zero;
        }
        string fileName = OperatingSystem.IsWindows()
            ? $"{LibraryName}.dll"
            : OperatingSystem.IsMacOS()
                ? $"lib{LibraryName}.dylib"
                : $"lib{LibraryName}.so";
        bool arm64 = RuntimeInformation.ProcessArchitecture == Architecture.Arm64;
        string rid = OperatingSystem.IsWindows()
            ? (arm64 ? "win-arm64" : "win-x64")
            : OperatingSystem.IsMacOS()
                ? (arm64 ? "osx-arm64" : "osx-x64")
                : (arm64 ? "linux-arm64" : "linux-x64");
        string baseDir = AppContext.BaseDirectory;
        foreach (string candidate in new[]
        {
            Path.Combine(baseDir, "runtimes", rid, "native", fileName),
            Path.Combine(baseDir, fileName),
        })
        {
            if (File.Exists(candidate) && NativeLibrary.TryLoad(candidate, out IntPtr handle))
            {
                return handle;
            }
        }
        return NativeLibrary.TryLoad(LibraryName, assembly, searchPath, out IntPtr fallback)
            ? fallback
            : IntPtr.Zero;
    }

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void acme_core_string_free(IntPtr text);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void acme_core_f64_array_free(AcmeCoreF64Array array);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void acme_core_u8_array_free(AcmeCoreU8Array array);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void acme_core_counter_free(IntPtr handle);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr acme_core_counter_new(long start);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern long acme_core_counter_value(IntPtr handle);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern long acme_core_counter_at(IntPtr handle, int level);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern long acme_core_counter_bump(IntPtr handle, long by, out IntPtr error);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern unsafe long acme_core_counter_bump_all(IntPtr handle, long* by, nuint by_len);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void acme_core_mode_free(IntPtr handle);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern unsafe IntPtr acme_core_describe(byte* label);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern unsafe AcmeCoreU8Array acme_core_digest(byte* data, nuint data_len);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr acme_core_find_counter(long start);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern unsafe IntPtr acme_core_greet(byte* name);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern unsafe AcmeCoreF64Array acme_core_normalize(double* input, nuint input_len, double factor);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern unsafe int acme_core_peak_level(double* values, nuint values_len);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern unsafe void acme_core_scale_into(double* values, nuint values_len, double factor, double* out_, nuint out__len);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern unsafe ulong acme_core_stamp(long handle_, double error_, byte* register, nuint register_len);
}
